feat: add social engine

--- a/app/views/layouts/partials/_application-lesli-engines.html.erb
+++ b/app/views/layouts/partials/_application-lesli-engines.html.erb
@@ -35,6 +35,7 @@ For more information read the license file including with this software.
     <%= navigation_engine_work %>
     <%= navigation_engine_focus %>
     <%= navigation_engine_text %>
+    <%= navigation_engine_social %>
     <%= navigation_engine_bell %>
     <%= navigation_engine_talk %>
     <%= navigation_engine_storage %>
