feat: add detail row to LesliTable

--- a/lib/assets/scss/lesli3/components/lesli-table.scss
+++ b/lib/assets/scss/lesli3/components/lesli-table.scss
@@ -75,6 +75,12 @@ table.lesli-table {
         }
     }
 
+    // icon to show detail row if detail slot is provided
+    td.detailRow {
+        width: 40px;
+        display: inline-block;
+    }
+
     td.options {
         .dropdown {
             .button {
