--- a/lib/assets/scss/lesli3/components/lesli-gallery.scss
+++ b/lib/assets/scss/lesli3/components/lesli-gallery.scss
@@ -17,13 +17,17 @@ For more information read the license file including with this software.
 
 // · 
 .lesli-gallery {
-    .preview{
+    min-height: auto;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    .grid {
         height: auto;
         width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fill, 150px);
         gap: 18px;
-        &-item {
+        .item {
             width: 150px;
             height: 150px;
             position: relative;
@@ -42,6 +46,35 @@ For more information read the license file including with this software.
                 cursor: pointer;
                 background: white;
                 border-radius: 50%;
+            }
+        }
+    }
+    .slider {
+        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        &-controls {
+            position: absolute;
+            bottom: 20px;
+            left: 10px;
+            display: flex;
+            align-items: center;
+            .info {
+                color: white;
+                text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+                font-size: 24px;
+                margin-left: 16px;
+            }
+            button {
+                &:first-child {
+                    margin-right: 5px;
+                }
+                .icon {
+                    margin: 0 !important;
+                }
             }
         }
     }
