--- a/app/views/layouts/partials/_application-data.html.erb
+++ b/app/views/layouts/partials/_application-data.html.erb
@@ -18,6 +18,7 @@ For more information read the license file including with this software.
 
 <%
 # Include defaults to account
+@account[:implementation] = Rails.application.credentials.dig(:implementation) || lesli_instance_code
 @account[:instance] = lesli_instance_code
 @account[:engine] = lesli_engine.dig(:code)                            # use into url plugin to for dynamic search 
 @account[:url] = { root: request.base_url.to_s,  path: request.path }   # use as base for url plugin
