--- a/lib/assets/scss/templates/component.scss.erb
+++ b/lib/assets/scss/templates/component.scss.erb
@@ -18,4 +18,15 @@ For more information read the license file including with this software.
 
 
 // · Include Lesli CSS
-@import "../lesli3/settings/leslicss";
+//@import "../lesli3/settings/leslicss";
+
+// · 
+@import "lesli-css";
+
+
+// · Import customization from builder engine
+@import "<%= LC::System::Info.sass_instance('settings') %>";
+
+
+// · Configuration
+@import "./lesli3/settings/variables";
