--- a/lib/assets/scss/templates/component.scss.erb
+++ b/lib/assets/scss/templates/component.scss.erb
@@ -20,6 +20,7 @@ For more information read the license file including with this software.
 // · Include Lesli CSS
 //@import "../lesli3/settings/leslicss";
 
+
 // · 
 @import "lesli-css";
 
@@ -28,5 +29,5 @@ For more information read the license file including with this software.
 @import "<%= LC::System::Info.sass_instance('settings') %>";
 
 
-// · Configuration
-@import "./lesli3/settings/variables";
+// · Base variables
+$lesli-color-primary: lesli-css-color(blue) !default;
