feat: add new engine cloud_word

--- a/app/views/layouts/partials/_application-lesli-engines.html.erb
+++ b/app/views/layouts/partials/_application-lesli-engines.html.erb
@@ -27,6 +27,7 @@ For more information read the license file including with this software.
 
     <%# Sales & marketing %>
     <%= navigation_engine_house %>
+    <%= navigation_engine_word %>
     <%= navigation_engine_mailer %>
     <%= navigation_engine_proposal %>
 
