--- a/app/views/layouts/partials/_application-lesli-icons.html.erb
+++ b/app/views/layouts/partials/_application-lesli-icons.html.erb
@@ -7,11 +7,11 @@
     <path fill="#FFF" opacity=".2" d="M18.569 2.974 1 6.59v.25l17.569-3.615L23 4.248v-.25z"/>
     <path opacity=".1" d="M1 20.66v.25L18.518 24 23 22.88v-.25l-4.482 1.12z"/>
     <path fill="#FFF" d="M9.5 13H14V8.5l-4.5.833zm-1 0V9.518l-3.5.649V13zm1 1v3.667l4.5.833V14zm-1 0H5v2.833l3.5.648z"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-windows_svg__a-6a0ce266-26c4-4d03-a567-57f37d2495dd" x1=".718" x2="25.029" y1="7.193" y2="18.53">
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-windows_svg__a-061f52ce-0f29-4ef1-bb7c-5a515805cded" x1=".718" x2="25.029" y1="7.193" y2="18.53">
         <stop offset="0" stop-color="#fff" stop-opacity=".2"/>
         <stop offset="1" stop-color="#fff" stop-opacity="0"/>
     </linearGradient>
-    <path d="m18.569 2.974-3.022.622a4.493 4.493 0 0 0-3.12-2.486A4.461 4.461 0 0 0 9.5 0 4.504 4.504 0 0 0 5 4.498v1.268L1 6.59v14.32L18.518 24 23 22.88V3.998l-4.431-1.024zm-4.027.829-.6.123a4.485 4.485 0 0 0-.292-1.165c.357.284.665.633.892 1.042zm-2.558-1.766a3.48 3.48 0 0 1 .979 2.09L8.036 5.143C8.217 3.383 9.692 2 11.5 2c.164 0 .325.016.484.038zM6 4.498A3.503 3.503 0 0 1 9.5 1c.325 0 .633.058.932.141a4.49 4.49 0 0 0-3.417 4.21L6 5.562V4.497z" fill="url(#logo-windows_svg__a-6a0ce266-26c4-4d03-a567-57f37d2495dd)"/>
+    <path d="m18.569 2.974-3.022.622a4.493 4.493 0 0 0-3.12-2.486A4.461 4.461 0 0 0 9.5 0 4.504 4.504 0 0 0 5 4.498v1.268L1 6.59v14.32L18.518 24 23 22.88V3.998l-4.431-1.024zm-4.027.829-.6.123a4.485 4.485 0 0 0-.292-1.165c.357.284.665.633.892 1.042zm-2.558-1.766a3.48 3.48 0 0 1 .979 2.09L8.036 5.143C8.217 3.383 9.692 2 11.5 2c.164 0 .325.016.484.038zM6 4.498A3.503 3.503 0 0 1 9.5 1c.325 0 .633.058.932.141a4.49 4.49 0 0 0-3.417 4.21L6 5.562V4.497z" fill="url(#logo-windows_svg__a-061f52ce-0f29-4ef1-bb7c-5a515805cded)"/>
 </symbol><symbol id="cloud-talk" viewBox="0 0 50 44.66">
     <path d="M16 9h20V2c0-1.1-.9-2-2-2H2C.9 0 0 .9 0 2v26c0 1.1.9 2 2 2h3v5.83L12.33 30H14V11c0-1.1.9-2 2-2Z"/>
     <path d="M48.09 10.53H17.61c-1.05 0-1.91.85-1.91 1.91v24.77c0 1.05.85 1.91 1.91 1.91h20.64l6.98 5.56v-5.56h2.86c1.05 0 1.91-.85 1.91-1.91V12.43c0-1.05-.85-1.91-1.91-1.91Zm-6.62 19.9H24.23V28.4h17.24v2.03Zm0-4.76H24.23v-2.03h17.24v2.03Zm0-4.76H24.23v-2.03h17.24v2.03Z"/>
@@ -85,25 +85,25 @@
     <path d="M13 3.042c-.58 0-1 .622-1 1.479C12 5.378 12.42 6 13 6s1-.622 1-1.479c0-.857-.42-1.48-1-1.48z" fill="#FFF"/>
     <ellipse cx="13" cy="4.888" rx=".454" ry=".888"/>
     <path d="M10 3.042c-.58 0-1 .622-1 1.479C9 5.378 9.42 6 10 6s1-.622 1-1.479c0-.857-.42-1.48-1-1.48z" fill="#FFF"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__a-c9e98b37-7291-4afc-94a9-9029edc0c494" x1="10.383" x2="17.165" y1="6.81" y2="13.591">
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__a-afe81b43-78ef-4fee-ae9a-2ed7180434c6" x1="10.383" x2="17.165" y1="6.81" y2="13.591">
         <stop offset="0" stop-opacity=".1"/>
         <stop offset="1" stop-opacity="0"/>
     </linearGradient>
-    <path d="M13.802 7.742c-.963.626-2.643 1.117-2.85 1.117-.378 0-1.204-.27-1.811-.806l6.781 6.781c-.16-1.936-.669-4.138-2.12-7.092z" fill="url(#logo-linux_svg__a-c9e98b37-7291-4afc-94a9-9029edc0c494)"/>
+    <path d="M13.802 7.742c-.963.626-2.643 1.117-2.85 1.117-.378 0-1.204-.27-1.811-.806l6.781 6.781c-.16-1.936-.669-4.138-2.12-7.092z" fill="url(#logo-linux_svg__a-afe81b43-78ef-4fee-ae9a-2ed7180434c6)"/>
     <ellipse cx="10" cy="4.871" rx=".445" ry=".871"/>
     <path d="M11.598 5.01A.51.51 0 0 0 11.5 5c-1.075 0-3 1.008-3 2 0 .937 1.891 2 2.5 2 .295 0 3.5-1.113 3.5-2 0-1.308-2.221-1.854-2.902-1.99z" fill="#FDB515"/>
     <path d="M11.598 5.01A.51.51 0 0 0 11.5 5c-1.075 0-3 1.008-3 2 0 .937 1.891 2 2.5 2 .295 0 3.5-1.113 3.5-2 0-1.308-2.221-1.854-2.902-1.99z" fill="#FDB515"/>
     <path d="M20.54 21.51c-.437.16-.933.34-1.186.594-.11.11-.216.221-.318.33-.609.647-1.238 1.316-2.536 1.316-.494 0-.881-.15-1.151-.447-.294-.321-.36-.724-.367-1.054-.022.346-.01.892.367 1.304.27.297.657.447 1.151.447 1.298 0 1.927-.669 2.536-1.315.102-.11.207-.221.318-.331.253-.254.749-.435 1.186-.594.718-.262 1.46-.533 1.46-1.26 0-.036-.017-.062-.02-.097-.1.61-.777.864-1.44 1.107zM9.723 22.763c-.195.618-.652.987-1.223.987-.794 0-1.624-.382-2.29-.69-.312-.143-.634-.292-.788-.316-.1-.016-.254-.028-.44-.043-1.08-.09-2.85-.248-2.961-1.35l-.005.024A.49.49 0 0 0 2 21.5c0 1.202 1.867 1.358 2.983 1.45.185.016.34.028.439.044.154.024.476.173.787.316.667.308 1.497.69 2.291.69.571 0 1.028-.37 1.223-.987a2.32 2.32 0 0 0 .085-.852 2.21 2.21 0 0 1-.085.602zM10.99 8.75c-.561 0-2.172-.881-2.489-1.756L8.5 7c0 .937 1.891 2 2.5 2 .295 0 3.5-1.113 3.5-2 0-.02-.01-.035-.011-.054-.475.855-3.224 1.804-3.5 1.804z" opacity=".1"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__b-fd397597-e03d-4846-9be0-cfce633f0d5d" x1="17.862" x2="21.759" y1="17.22" y2="21.117">
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__b-996756d8-d8de-422b-8fb2-54bf3eaedfff" x1="17.862" x2="21.759" y1="17.22" y2="21.117">
         <stop offset="0" stop-opacity=".1"/>
         <stop offset="1" stop-opacity="0"/>
     </linearGradient>
-    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17a.644.644 0 0 0-.156-.114c-.063.91-.26 1.518-.636 1.89-.43.427-.98.466-1.488.466l-.17-.001L17.5 19a1.34 1.34 0 0 1-1.002-.417l3.42 3.421c.2-.09.417-.17.622-.244.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__b-fd397597-e03d-4846-9be0-cfce633f0d5d)"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__c-05da4767-0645-46e5-9874-4fa575b74361" x1="5.245" x2="23.086" y1="10.06" y2="18.379">
+    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17a.644.644 0 0 0-.156-.114c-.063.91-.26 1.518-.636 1.89-.43.427-.98.466-1.488.466l-.17-.001L17.5 19a1.34 1.34 0 0 1-1.002-.417l3.42 3.421c.2-.09.417-.17.622-.244.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__b-996756d8-d8de-422b-8fb2-54bf3eaedfff)"/>
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__c-069c0388-8df2-44cf-95b7-f119bb78324e" x1="5.245" x2="23.086" y1="10.06" y2="18.379">
         <stop offset="0" stop-color="#fff" stop-opacity=".2"/>
         <stop offset="1" stop-color="#fff" stop-opacity="0"/>
     </linearGradient>
-    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17-.033-.038-.094-.075-.147-.112.013-.2.02-.415.02-.648 0-3.247-1.496-5.12-2.697-6.625C16.575 8.463 16 7.743 16 7l.001-.233c.008-1.38.024-4.253-1.502-5.788C13.853.329 13.012 0 12 0 9.9 0 8.5 1.02 8.5 6c0 1.37-.577 2.493-1.187 3.682-.268.52-.544 1.06-.776 1.63-.42 1.03-1.333 3.399-1.502 4.783-.54.228-.697.835-.785 1.197-.03.125-.076.312-.08.334-.074.046-.354.102-.538.138C3.022 17.885 2 18.087 2 19c0 .266.04.491.083.726.077.416.15.809-.067 1.649A.49.49 0 0 0 2 21.5c0 1.202 1.867 1.358 2.983 1.45.185.016.34.028.439.044.154.024.476.173.787.316.667.308 1.497.69 2.291.69.342 0 .634-.145.862-.384.017-.015.04-.023.055-.04C9.639 23.328 11.112 23 12 23h3.06c.056.193.135.385.289.553.27.297.657.447 1.151.447 1.298 0 1.927-.669 2.536-1.315.102-.11.207-.221.318-.331.253-.254.749-.435 1.186-.594.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__c-05da4767-0645-46e5-9874-4fa575b74361)"/>
+    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17-.033-.038-.094-.075-.147-.112.013-.2.02-.415.02-.648 0-3.247-1.496-5.12-2.697-6.625C16.575 8.463 16 7.743 16 7l.001-.233c.008-1.38.024-4.253-1.502-5.788C13.853.329 13.012 0 12 0 9.9 0 8.5 1.02 8.5 6c0 1.37-.577 2.493-1.187 3.682-.268.52-.544 1.06-.776 1.63-.42 1.03-1.333 3.399-1.502 4.783-.54.228-.697.835-.785 1.197-.03.125-.076.312-.08.334-.074.046-.354.102-.538.138C3.022 17.885 2 18.087 2 19c0 .266.04.491.083.726.077.416.15.809-.067 1.649A.49.49 0 0 0 2 21.5c0 1.202 1.867 1.358 2.983 1.45.185.016.34.028.439.044.154.024.476.173.787.316.667.308 1.497.69 2.291.69.342 0 .634-.145.862-.384.017-.015.04-.023.055-.04C9.639 23.328 11.112 23 12 23h3.06c.056.193.135.385.289.553.27.297.657.447 1.151.447 1.298 0 1.927-.669 2.536-1.315.102-.11.207-.221.318-.331.253-.254.749-.435 1.186-.594.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__c-069c0388-8df2-44cf-95b7-f119bb78324e)"/>
 </symbol><symbol id="cloud-dispatcher" viewBox="0 0 40 43">
     <path d="M39.15 10H.85a.85.85 0 0 0-.85.85v7.31c0 .47.38.85.85.85h38.3c.47 0 .85-.38.85-.85v-7.31a.85.85 0 0 0-.85-.85ZM9 16.45c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9ZM34 17c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Zm5.15-17H.85A.85.85 0 0 0 0 .85v7.31c0 .47.38.85.85.85h38.3c.47 0 .85-.38.85-.85V.85a.85.85 0 0 0-.85-.85ZM9 6.45c0 .3-.25.55-.55.55h-4.9C3.25 7 3 6.75 3 6.45v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9ZM34 7c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Zm5.15 13H.85a.85.85 0 0 0-.85.85v7.31c0 .47.38.85.85.85h38.3c.47 0 .85-.38.85-.85v-7.31a.85.85 0 0 0-.85-.85ZM9 26.45c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9ZM34 27c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Zm-17 3h6v7h-6z"/>
     <rect y="38" width="40" height="5" rx=".67" ry=".67"/>
@@ -119,7 +119,7 @@
     <path d="m84.75 30.25-5.6 5.6c5.8 3 10.5 7.7 13.5 13.5l5.6-5.6c-3.4-5.5-8-10.2-13.5-13.5Zm-48.9 48.8-5.6 5.7c3.3 5.5 8 10.1 13.5 13.5l5.6-5.6c-5.7-3.1-10.4-7.8-13.5-13.6Zm43.3 13.6 5.6 5.6c5.5-3.3 10.1-8 13.5-13.5l-5.6-5.6c-3.1 5.7-7.8 10.4-13.5 13.5Zm-29.7-56.7-5.7-5.7c-5.5 3.4-10.1 8-13.5 13.5l5.6 5.6c3.1-5.7 7.8-10.4 13.6-13.4Zm-27.4 57-2.9 2.9c3.7 5.2 8.2 9.8 13.5 13.5l2.9-2.9c-5.3-3.7-9.9-8.2-13.5-13.5Zm84.4 0c-3.6 5.3-8.2 9.9-13.5 13.5l2.9 2.9c5.2-3.7 9.8-8.3 13.5-13.5l-2.9-2.9Zm-84.4-57.4c3.6-5.3 8.2-9.9 13.5-13.5l-2.8-2.8c-5.2 3.7-9.8 8.3-13.5 13.5l2.8 2.8Z"/>
     <circle cx="64.25" cy="64.25" r="63.75" fill="none" stroke="#000" stroke-miterlimit="10"/>
 </symbol><symbol id="logo-android" viewBox="0 0 26 26">
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__a-6cb5ca70-eec1-4373-8bec-9fefbb467a37" x1="13.641" x2="-3.141" y1="549.889" y2="533.106">
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__a-afcab4b3-d8dc-4adf-913f-fbf815e2f9b0" x1="13.641" x2="-3.141" y1="549.889" y2="533.106">
         <stop offset="0" stop-color="#00a0ff"/>
         <stop offset=".007" stop-color="#00a1ff"/>
         <stop offset=".26" stop-color="#00beff"/>
@@ -127,36 +127,36 @@
         <stop offset=".76" stop-color="#00dfff"/>
         <stop offset="1" stop-color="#00e3ff"/>
     </linearGradient>
-    <path d="M2.3.5c-.3.3-.5.8-.5 1.4V24c0 .6.2 1.1.5 1.4l.1.1 12.4-12.4v-.2L2.3.5z" fill="url(#logo-android_svg__a-6cb5ca70-eec1-4373-8bec-9fefbb467a37)"/>
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__b-2de5a955-e98b-4fb1-ab6b-7f6be41e3afc" x1="25.676" x2="1.479" y1="538.597" y2="538.597">
+    <path d="M2.3.5c-.3.3-.5.8-.5 1.4V24c0 .6.2 1.1.5 1.4l.1.1 12.4-12.4v-.2L2.3.5z" fill="url(#logo-android_svg__a-afcab4b3-d8dc-4adf-913f-fbf815e2f9b0)"/>
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__b-706f06b9-daf8-4a48-8405-0e3b5e6b9d3c" x1="25.676" x2="1.479" y1="538.597" y2="538.597">
         <stop offset="0" stop-color="#ffe000"/>
         <stop offset=".409" stop-color="#ffbd00"/>
         <stop offset=".775" stop-color="orange"/>
         <stop offset="1" stop-color="#ff9c00"/>
     </linearGradient>
-    <path d="m18.9 17.3-4.1-4.1v-.3l4.1-4.1h.1l4.9 2.8c1.4.8 1.4 2.1 0 2.9l-5 2.8z" fill="url(#logo-android_svg__b-2de5a955-e98b-4fb1-ab6b-7f6be41e3afc)"/>
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__c-6a33ab0d-2db9-4289-af37-af113d7dd429" x1="16.668" x2="-6.09" y1="536.302" y2="513.544">
+    <path d="m18.9 17.3-4.1-4.1v-.3l4.1-4.1h.1l4.9 2.8c1.4.8 1.4 2.1 0 2.9l-5 2.8z" fill="url(#logo-android_svg__b-706f06b9-daf8-4a48-8405-0e3b5e6b9d3c)"/>
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__c-94df7438-4ec2-4dcd-902f-f07e69fb1bae" x1="16.668" x2="-6.09" y1="536.302" y2="513.544">
         <stop offset="0" stop-color="#ff3a44"/>
         <stop offset="1" stop-color="#c31162"/>
     </linearGradient>
-    <path d="M19 17.2 14.7 13 2.3 25.5c.4.5 1.2.5 2.1 0L19 17.2" fill="url(#logo-android_svg__c-6a33ab0d-2db9-4289-af37-af113d7dd429)"/>
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__d-1ea13d51-a0e1-49cd-8524-f9e6ddf766ee" x1="-.861" x2="9.301" y1="558.422" y2="548.26">
+    <path d="M19 17.2 14.7 13 2.3 25.5c.4.5 1.2.5 2.1 0L19 17.2" fill="url(#logo-android_svg__c-94df7438-4ec2-4dcd-902f-f07e69fb1bae)"/>
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__d-3c7136fd-177c-4df0-97e6-ed973ebaa688" x1="-.861" x2="9.301" y1="558.422" y2="548.26">
         <stop offset="0" stop-color="#32a071"/>
         <stop offset=".069" stop-color="#2da771"/>
         <stop offset=".476" stop-color="#15cf74"/>
         <stop offset=".801" stop-color="#06e775"/>
         <stop offset="1" stop-color="#00f076"/>
     </linearGradient>
-    <path d="M19 8.8 4.4.5C3.5 0 2.7 0 2.3.5L14.7 13 19 8.8z" fill="url(#logo-android_svg__d-1ea13d51-a0e1-49cd-8524-f9e6ddf766ee)"/>
+    <path d="M19 8.8 4.4.5C3.5 0 2.7 0 2.3.5L14.7 13 19 8.8z" fill="url(#logo-android_svg__d-3c7136fd-177c-4df0-97e6-ed973ebaa688)"/>
 </symbol><symbol id="cloud-driver" viewBox="0 0 18 21">
     <path d="M3 0c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1Zm12 0c-.55 0-1 .4-1 1v3c0 .5.45 1 1 1s1-.5 1-1V1c0-.6-.45-1-1-1ZM0 7.76V19c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V7.76H0ZM9 15c0 1.1-.9 2-2 2H5v-1h2c.55 0 1-.5 1-1 0-.6-.45-1-1-1H6v-1h1c.55 0 1-.5 1-1 0-.6-.45-1-1-1H5v-1h2c1.1 0 2 .9 2 2 0 .6-.27 1.1-.69 1.5.42.3.69.9.69 1.5Zm4 2h-3v-1h1v-5h-1v-1h2v6h1v1Z"/>
     <path d="M16.28 2.03v1.7c.14.23.22.49.22.77 0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5c0-.28.08-.55.22-.77V2H4.28v1.73c.14.23.22.49.22.77C4.5 5.33 3.83 6 3 6s-1.5-.67-1.5-1.5c0-.28.08-.55.22-.77v-1.7C.75 2.17 0 3 0 4v3h18V4c0-1-.75-1.83-1.72-1.97Z"/>
-</symbol><symbol id="cloud-drop" viewBox="0 0 103.51 102.88">
+</symbol><symbol id="icon-module" viewBox="0 0 512 512">
+    <path d="M354.67 450h-107A15 15 0 0 1 236 425.68a33.18 33.18 0 0 0 7.22-20.81 33.59 33.59 0 0 0-67.17 0 33.18 33.18 0 0 0 7.22 20.81A15 15 0 0 1 171.48 450h-107a15 15 0 0 1-15-15V297.06a15 15 0 0 1 24-12 33.59 33.59 0 1 0 0-53.7 15 15 0 0 1-24-12v-74.5a15 15 0 0 1 15-15h84.16a63.59 63.59 0 1 1 121.83 0h84.16a15 15 0 0 1 15 15v52.19a63.59 63.59 0 1 1 0 122.36V435a15 15 0 0 1-14.96 15Zm-83.32-30h68.32V294.48a15 15 0 0 1 25-11.18 33.59 33.59 0 1 0 0-50.14 15 15 0 0 1-25-11.18v-62.12H245a15 15 0 0 1-10.93-25.27 33.59 33.59 0 1 0-48.91 0 15 15 0 0 1-10.93 25.27H79.52v36.36a64.45 64.45 0 0 1 14.2-1.58 63.59 63.59 0 1 1-14.2 125.59V420h68.32a63.59 63.59 0 1 1 123.51 0Z" data-name="1"/>
+</symbol><symbol id="cloud-word" viewBox="0 0 103.51 102.88">
     <path d="M88 98.88H8c-4.4 0-8-3.6-8-8v4c0 4.4 3.6 8 8 8h80c4.4 0 8-3.6 8-8v-4c0 4.4-3.6 8-8 8Z" style="isolation:isolate" opacity=".1"/>
     <path d="M79.98 49.09c-.1.93-.83 1.67-1.77 1.77L66.19 62.88H78c1.1 0 2 .9 2 2s-.9 2-2 2H62.19l-3.38 3.38s-.03.02-.04.03c-.23.23-.48.44-.73.63h-.03a7.1 7.1 0 0 1-3.82 1.41L20.34 84.89c-.24.08-.46.14-.66.18h-.07c-.18.02-.35.04-.51.02-.34-.03-.62-.16-.81-.36-.37-.4-.44-1.09-.11-2l5.73-15.85h-4.9c-1.1 0-2-.9-2-2s.9-2 2-2h6.35l4.34-12H19.02c-1.1 0-2-.9-2-2s.9-2 2-2h12.1c.24-.68.57-1.33 1.02-1.92.2-.26.41-.51.65-.74l9.33-9.33H19c-1.1 0-2-.9-2-2s.9-2 2-2h27.09l25-25.01H8c-4.4 0-8 3.6-8 8v81c0 4.4 3.6 8 8 8h80c4.4 0 8-3.6 8-8V33.07L79.98 49.09Z" style="isolation:isolate"/>
     <path d="M34.71 47.48c-.19.19-.37.4-.53.61-.48.64-.81 1.35-1 2.09L22.76 79.01c-.27.75-.21 1.31.09 1.64.16.17.38.27.66.29h.01c.13.01.27 0 .42-.02h.05c.17-.03.35-.07.54-.14L52.24 70.5c1.11-.07 2.2-.46 3.13-1.16h.02c.21-.16.41-.33.6-.51 0 0 .02-.02.03-.02l38.07-38.06L73.47 8.73 34.71 47.48Zm67.09-24.44c.29-.29.54-.59.75-.92 1.5-2.28 1.25-5.4-.75-7.4l-13-13c-2.29-2.29-6.03-2.29-8.32 0l-4.01 4.01 20.62 22.02 4.71-4.71Z"/>
-</symbol><symbol id="icon-module" viewBox="0 0 512 512">
-    <path d="M354.67 450h-107A15 15 0 0 1 236 425.68a33.18 33.18 0 0 0 7.22-20.81 33.59 33.59 0 0 0-67.17 0 33.18 33.18 0 0 0 7.22 20.81A15 15 0 0 1 171.48 450h-107a15 15 0 0 1-15-15V297.06a15 15 0 0 1 24-12 33.59 33.59 0 1 0 0-53.7 15 15 0 0 1-24-12v-74.5a15 15 0 0 1 15-15h84.16a63.59 63.59 0 1 1 121.83 0h84.16a15 15 0 0 1 15 15v52.19a63.59 63.59 0 1 1 0 122.36V435a15 15 0 0 1-14.96 15Zm-83.32-30h68.32V294.48a15 15 0 0 1 25-11.18 33.59 33.59 0 1 0 0-50.14 15 15 0 0 1-25-11.18v-62.12H245a15 15 0 0 1-10.93-25.27 33.59 33.59 0 1 0-48.91 0 15 15 0 0 1-10.93 25.27H79.52v36.36a64.45 64.45 0 0 1 14.2-1.58 63.59 63.59 0 1 1-14.2 125.59V420h68.32a63.59 63.59 0 1 1 123.51 0Z" data-name="1"/>
 </symbol><symbol id="cloud-babel" viewBox="0 0 50.77 47.31">
     <path d="M4 0C1.8 0 0 1.8 0 4v22c0 2.2 1.8 4 4 4h26V0H4Zm18 12h-2.18a10.86 10.86 0 0 1-1.8 4.57l-.57.82-.07-.05c-.33.42-.71.83-1.12 1.23.9.65 1.93 1.3 3.11 1.94l.88.48-.96 1.76-.88-.48c-1.22-.66-2.5-1.44-3.71-2.36-1.05.8-2.27 1.58-3.74 2.36l-.88.47-.94-1.76.88-.47a27.5 27.5 0 0 0 3.14-1.93c-1.75-1.69-3.14-3.82-3.59-6.59H8v-2h6v-2h2v2h6v2Z"/>
     <path d="M11.6 12c.39 1.98 1.38 3.7 3.12 5.31.66-.63 1.2-1.27 1.65-1.95l.55-.84h.02c.42-.78.7-1.63.87-2.52h-6.2Z"/>
