--- a/app/assets/stylesheets/administration/application.scss
+++ b/app/assets/stylesheets/administration/application.scss
@@ -26,4 +26,5 @@ For more information read the license file including with this software.
 
 // · users management & user profile 
 @import "../users.scss";
+@import "../abouts";
 
