feat: richtext-editor add support for base64 attachments

--- a/lib/assets/scss/lesli3/components/editor-richtext.scss
+++ b/lib/assets/scss/lesli3/components/editor-richtext.scss
@@ -56,4 +56,8 @@ For more information read the license file including with this software.
             display: none;
         }
     }
+
+    .attachment--png {
+        display: none !important;
+    }
 }
