feat: add scraper engine

--- a/app/views/layouts/partials/_application-lesli-engines.html.erb
+++ b/app/views/layouts/partials/_application-lesli-engines.html.erb
@@ -59,4 +59,7 @@ For more information read the license file including with this software.
     <%= navigation_engine_federation %>
     <%= navigation_engine_development %>
 
+    <%# Intelligence %>
+    <%= navigation_engine_scraper %>
+
 </application-component-engines>
