--- a/app/views/layouts/partials/_application-lesli-icons.html.erb
+++ b/app/views/layouts/partials/_application-lesli-icons.html.erb
@@ -7,11 +7,11 @@
     <path fill="#FFF" opacity=".2" d="M18.569 2.974 1 6.59v.25l17.569-3.615L23 4.248v-.25z"/>
     <path opacity=".1" d="M1 20.66v.25L18.518 24 23 22.88v-.25l-4.482 1.12z"/>
     <path fill="#FFF" d="M9.5 13H14V8.5l-4.5.833zm-1 0V9.518l-3.5.649V13zm1 1v3.667l4.5.833V14zm-1 0H5v2.833l3.5.648z"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-windows_svg__a-94e863e5-b1aa-41c2-ae18-38b3328d927a" x1=".718" x2="25.029" y1="7.193" y2="18.53">
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-windows_svg__a-e7609862-0445-48be-b029-4a4f2dad45f2" x1=".718" x2="25.029" y1="7.193" y2="18.53">
         <stop offset="0" stop-color="#fff" stop-opacity=".2"/>
         <stop offset="1" stop-color="#fff" stop-opacity="0"/>
     </linearGradient>
-    <path d="m18.569 2.974-3.022.622a4.493 4.493 0 0 0-3.12-2.486A4.461 4.461 0 0 0 9.5 0 4.504 4.504 0 0 0 5 4.498v1.268L1 6.59v14.32L18.518 24 23 22.88V3.998l-4.431-1.024zm-4.027.829-.6.123a4.485 4.485 0 0 0-.292-1.165c.357.284.665.633.892 1.042zm-2.558-1.766a3.48 3.48 0 0 1 .979 2.09L8.036 5.143C8.217 3.383 9.692 2 11.5 2c.164 0 .325.016.484.038zM6 4.498A3.503 3.503 0 0 1 9.5 1c.325 0 .633.058.932.141a4.49 4.49 0 0 0-3.417 4.21L6 5.562V4.497z" fill="url(#logo-windows_svg__a-94e863e5-b1aa-41c2-ae18-38b3328d927a)"/>
+    <path d="m18.569 2.974-3.022.622a4.493 4.493 0 0 0-3.12-2.486A4.461 4.461 0 0 0 9.5 0 4.504 4.504 0 0 0 5 4.498v1.268L1 6.59v14.32L18.518 24 23 22.88V3.998l-4.431-1.024zm-4.027.829-.6.123a4.485 4.485 0 0 0-.292-1.165c.357.284.665.633.892 1.042zm-2.558-1.766a3.48 3.48 0 0 1 .979 2.09L8.036 5.143C8.217 3.383 9.692 2 11.5 2c.164 0 .325.016.484.038zM6 4.498A3.503 3.503 0 0 1 9.5 1c.325 0 .633.058.932.141a4.49 4.49 0 0 0-3.417 4.21L6 5.562V4.497z" fill="url(#logo-windows_svg__a-e7609862-0445-48be-b029-4a4f2dad45f2)"/>
 </symbol><symbol id="cloud-talk" viewBox="0 0 50 44.66">
     <path d="M16 9h20V2c0-1.1-.9-2-2-2H2C.9 0 0 .9 0 2v26c0 1.1.9 2 2 2h3v5.83L12.33 30H14V11c0-1.1.9-2 2-2Z"/>
     <path d="M48.09 10.53H17.61c-1.05 0-1.91.85-1.91 1.91v24.77c0 1.05.85 1.91 1.91 1.91h20.64l6.98 5.56v-5.56h2.86c1.05 0 1.91-.85 1.91-1.91V12.43c0-1.05-.85-1.91-1.91-1.91Zm-6.62 19.9H24.23V28.4h17.24v2.03Zm0-4.76H24.23v-2.03h17.24v2.03Zm0-4.76H24.23v-2.03h17.24v2.03Z"/>
@@ -85,25 +85,39 @@
     <path d="M13 3.042c-.58 0-1 .622-1 1.479C12 5.378 12.42 6 13 6s1-.622 1-1.479c0-.857-.42-1.48-1-1.48z" fill="#FFF"/>
     <ellipse cx="13" cy="4.888" rx=".454" ry=".888"/>
     <path d="M10 3.042c-.58 0-1 .622-1 1.479C9 5.378 9.42 6 10 6s1-.622 1-1.479c0-.857-.42-1.48-1-1.48z" fill="#FFF"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__a-d7677714-52f9-4fca-bd11-db986469e183" x1="10.383" x2="17.165" y1="6.81" y2="13.591">
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__a-24619563-a014-4f55-bc51-77d407bb8160" x1="10.383" x2="17.165" y1="6.81" y2="13.591">
         <stop offset="0" stop-opacity=".1"/>
         <stop offset="1" stop-opacity="0"/>
     </linearGradient>
-    <path d="M13.802 7.742c-.963.626-2.643 1.117-2.85 1.117-.378 0-1.204-.27-1.811-.806l6.781 6.781c-.16-1.936-.669-4.138-2.12-7.092z" fill="url(#logo-linux_svg__a-d7677714-52f9-4fca-bd11-db986469e183)"/>
+    <path d="M13.802 7.742c-.963.626-2.643 1.117-2.85 1.117-.378 0-1.204-.27-1.811-.806l6.781 6.781c-.16-1.936-.669-4.138-2.12-7.092z" fill="url(#logo-linux_svg__a-24619563-a014-4f55-bc51-77d407bb8160)"/>
     <ellipse cx="10" cy="4.871" rx=".445" ry=".871"/>
     <path d="M11.598 5.01A.51.51 0 0 0 11.5 5c-1.075 0-3 1.008-3 2 0 .937 1.891 2 2.5 2 .295 0 3.5-1.113 3.5-2 0-1.308-2.221-1.854-2.902-1.99z" fill="#FDB515"/>
     <path d="M11.598 5.01A.51.51 0 0 0 11.5 5c-1.075 0-3 1.008-3 2 0 .937 1.891 2 2.5 2 .295 0 3.5-1.113 3.5-2 0-1.308-2.221-1.854-2.902-1.99z" fill="#FDB515"/>
     <path d="M20.54 21.51c-.437.16-.933.34-1.186.594-.11.11-.216.221-.318.33-.609.647-1.238 1.316-2.536 1.316-.494 0-.881-.15-1.151-.447-.294-.321-.36-.724-.367-1.054-.022.346-.01.892.367 1.304.27.297.657.447 1.151.447 1.298 0 1.927-.669 2.536-1.315.102-.11.207-.221.318-.331.253-.254.749-.435 1.186-.594.718-.262 1.46-.533 1.46-1.26 0-.036-.017-.062-.02-.097-.1.61-.777.864-1.44 1.107zM9.723 22.763c-.195.618-.652.987-1.223.987-.794 0-1.624-.382-2.29-.69-.312-.143-.634-.292-.788-.316-.1-.016-.254-.028-.44-.043-1.08-.09-2.85-.248-2.961-1.35l-.005.024A.49.49 0 0 0 2 21.5c0 1.202 1.867 1.358 2.983 1.45.185.016.34.028.439.044.154.024.476.173.787.316.667.308 1.497.69 2.291.69.571 0 1.028-.37 1.223-.987a2.32 2.32 0 0 0 .085-.852 2.21 2.21 0 0 1-.085.602zM10.99 8.75c-.561 0-2.172-.881-2.489-1.756L8.5 7c0 .937 1.891 2 2.5 2 .295 0 3.5-1.113 3.5-2 0-.02-.01-.035-.011-.054-.475.855-3.224 1.804-3.5 1.804z" opacity=".1"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__b-0f6cdcd4-0001-4124-86fa-7353ee9084e0" x1="17.862" x2="21.759" y1="17.22" y2="21.117">
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__b-9d7dacd7-7f45-4f59-87eb-57a24c9e5492" x1="17.862" x2="21.759" y1="17.22" y2="21.117">
         <stop offset="0" stop-opacity=".1"/>
         <stop offset="1" stop-opacity="0"/>
     </linearGradient>
-    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17a.644.644 0 0 0-.156-.114c-.063.91-.26 1.518-.636 1.89-.43.427-.98.466-1.488.466l-.17-.001L17.5 19a1.34 1.34 0 0 1-1.002-.417l3.42 3.421c.2-.09.417-.17.622-.244.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__b-0f6cdcd4-0001-4124-86fa-7353ee9084e0)"/>
-    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__c-2fc7b4cd-21ea-49e5-9e51-bc389d4f3bdd" x1="5.245" x2="23.086" y1="10.06" y2="18.379">
+    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17a.644.644 0 0 0-.156-.114c-.063.91-.26 1.518-.636 1.89-.43.427-.98.466-1.488.466l-.17-.001L17.5 19a1.34 1.34 0 0 1-1.002-.417l3.42 3.421c.2-.09.417-.17.622-.244.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__b-9d7dacd7-7f45-4f59-87eb-57a24c9e5492)"/>
+    <linearGradient gradientUnits="userSpaceOnUse" id="logo-linux_svg__c-103d2608-b0cd-45da-8222-75c84cf25041" x1="5.245" x2="23.086" y1="10.06" y2="18.379">
         <stop offset="0" stop-color="#fff" stop-opacity=".2"/>
         <stop offset="1" stop-color="#fff" stop-opacity="0"/>
     </linearGradient>
-    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17-.033-.038-.094-.075-.147-.112.013-.2.02-.415.02-.648 0-3.247-1.496-5.12-2.697-6.625C16.575 8.463 16 7.743 16 7l.001-.233c.008-1.38.024-4.253-1.502-5.788C13.853.329 13.012 0 12 0 9.9 0 8.5 1.02 8.5 6c0 1.37-.577 2.493-1.187 3.682-.268.52-.544 1.06-.776 1.63-.42 1.03-1.333 3.399-1.502 4.783-.54.228-.697.835-.785 1.197-.03.125-.076.312-.08.334-.074.046-.354.102-.538.138C3.022 17.885 2 18.087 2 19c0 .266.04.491.083.726.077.416.15.809-.067 1.649A.49.49 0 0 0 2 21.5c0 1.202 1.867 1.358 2.983 1.45.185.016.34.028.439.044.154.024.476.173.787.316.667.308 1.497.69 2.291.69.342 0 .634-.145.862-.384.017-.015.04-.023.055-.04C9.639 23.328 11.112 23 12 23h3.06c.056.193.135.385.289.553.27.297.657.447 1.151.447 1.298 0 1.927-.669 2.536-1.315.102-.11.207-.221.318-.331.253-.254.749-.435 1.186-.594.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__c-2fc7b4cd-21ea-49e5-9e51-bc389d4f3bdd)"/>
+    <path d="M20.926 19.074c-.207-.136-.421-.276-.572-.428-.089-.088-.048-.497-.027-.716.042-.422.085-.858-.2-1.17-.033-.038-.094-.075-.147-.112.013-.2.02-.415.02-.648 0-3.247-1.496-5.12-2.697-6.625C16.575 8.463 16 7.743 16 7l.001-.233c.008-1.38.024-4.253-1.502-5.788C13.853.329 13.012 0 12 0 9.9 0 8.5 1.02 8.5 6c0 1.37-.577 2.493-1.187 3.682-.268.52-.544 1.06-.776 1.63-.42 1.03-1.333 3.399-1.502 4.783-.54.228-.697.835-.785 1.197-.03.125-.076.312-.08.334-.074.046-.354.102-.538.138C3.022 17.885 2 18.087 2 19c0 .266.04.491.083.726.077.416.15.809-.067 1.649A.49.49 0 0 0 2 21.5c0 1.202 1.867 1.358 2.983 1.45.185.016.34.028.439.044.154.024.476.173.787.316.667.308 1.497.69 2.291.69.342 0 .634-.145.862-.384.017-.015.04-.023.055-.04C9.639 23.328 11.112 23 12 23h3.06c.056.193.135.385.289.553.27.297.657.447 1.151.447 1.298 0 1.927-.669 2.536-1.315.102-.11.207-.221.318-.331.253-.254.749-.435 1.186-.594.718-.262 1.46-.533 1.46-1.26 0-.721-.595-1.112-1.074-1.426z" fill="url(#logo-linux_svg__c-103d2608-b0cd-45da-8222-75c84cf25041)"/>
+</symbol><symbol id="cloud-scraper" viewBox="0 0 32 32">
+    <g data-name="Layer 50">
+        <path d="M16.09 7.62a.501.501 0 0 1-.5.5h-.58v3.94a.448.448 0 0 0-.04-.2.419.419 0 0 0-.11-.16.507.507 0 0 0-.35-.14h-.5V8.12H9.94v3.44h2.03a.501.501 0 0 0-.5.5v6.12a2.623 2.623 0 0 0-2.09-1.05 2.671 2.671 0 0 0-2.41 1.57H5.58v-1.98a.495.495 0 0 0 .5.5h1.59a.495.495 0 0 0 .5-.5v-1.44a.501.501 0 0 0-.5-.5H6.08a.501.501 0 0 0-.5.5v-.72a.48.48 0 0 1 .2-.4l1.06-.79 1-.74 1.1-.82V8.12h-.59a.508.508 0 0 1-.5-.5.501.501 0 0 1 .5-.5h7.24a.495.495 0 0 1 .5.5Z" fill="#fa0"/>
+        <path d="M6.98 20.83H5.15a.501.501 0 0 1-.5-.5V19.2a.495.495 0 0 1 .5-.5h1.82a2.464 2.464 0 0 0-.14.38 2.929 2.929 0 0 0-.08.62v.13a2.578 2.578 0 0 0 .09.63 1.657 1.657 0 0 0 .14.37Zm8.16-.37a2.35 2.35 0 0 0 .14.37h-3.5a3.043 3.043 0 0 0 .14-.39 3.601 3.601 0 0 0 .09-.61v-.13a4.435 4.435 0 0 0-.09-.64c-.04-.12-.08-.24-.13-.36h3.49a2.464 2.464 0 0 0-.14.38 3.861 3.861 0 0 0-.09.62v.13a4.139 4.139 0 0 0 .09.63Z" fill="#ffe861"/>
+        <path d="M18.81 15.89a.496.496 0 0 0 .1.7l1.48 1.11 1 .75v1.88a.501.501 0 0 1-.5.5h-.8a3.043 3.043 0 0 0 .14-.39 2.765 2.765 0 0 0 .08-.61h.08v-.13h-.08a2.72 2.72 0 0 0-.09-.64 2.6 2.6 0 0 0-.13-.36 2.627 2.627 0 0 0-4.81 0h-.27v-5.23h3.64a2.744 2.744 0 0 1 2.74 2.74v.99l-1-.75-.88-.66a.507.507 0 0 0-.7.1Z" fill="#fa0"/>
+        <path d="M21.76 17.48v1.25l-.37-.28-1-.75-1.48-1.11a.496.496 0 0 1-.1-.7.507.507 0 0 1 .7-.1l.88.66 1 .75Z" fill="#ffe861"/>
+        <path d="M26.78 19.28v1.04a.501.501 0 0 1-.5.5h-4.02a.495.495 0 0 1-.5-.5v-3.99a.501.501 0 0 1 .5-.5h1.24a.523.523 0 0 1 .37.16l2.77 2.95a.476.476 0 0 1 .14.34Z" fill="#fa0"/>
+        <path d="M20.31 19.7v.13a2.765 2.765 0 0 1-.08.61 3.043 3.043 0 0 1-.14.39 2.662 2.662 0 0 1-2.41 1.56 2.626 2.626 0 0 1-2.4-1.56 2.35 2.35 0 0 1-.14-.37 4.139 4.139 0 0 1-.09-.63v-.13a3.861 3.861 0 0 1 .09-.62 2.464 2.464 0 0 1 .14-.38 2.627 2.627 0 0 1 4.81 0 2.6 2.6 0 0 1 .13.36 2.72 2.72 0 0 1 .09.64ZM7.84 11.75v.88l-1 .74v-1.62a.166.166 0 0 0-.05-.12l-.78-.78a.495.495 0 0 1 0-.71.513.513 0 0 1 .71 0l.78.78a1.173 1.173 0 0 1 .34.83Z" fill="#4a4c4f"/>
+        <path d="M12.01 10.3v1.26H9.94V8.95h.71a1.353 1.353 0 0 1 1.36 1.35Z" fill="#ffe861"/>
+        <path d="M14.97 11.86a.572.572 0 0 0-.11-.16.507.507 0 0 0-.35-.14h-2.54a.501.501 0 0 0-.5.5v6.12a2.142 2.142 0 0 1 .32.52h.68v-.67h1.54v.67h1v-6.64a.448.448 0 0 0-.04-.2Zm-.96 5.17h-1.54v-.78h1.54Zm0-1.78h-1.54v-.78h1.54Zm0-1.78h-1.54v-.91h1.54Z" fill="#ffe861"/>
+        <path d="M12.01 19.7v.13a3.601 3.601 0 0 1-.09.61 3.043 3.043 0 0 1-.14.39 2.626 2.626 0 0 1-4.8 0 1.657 1.657 0 0 1-.14-.37 2.578 2.578 0 0 1-.09-.63v-.13a2.929 2.929 0 0 1 .08-.62 2.464 2.464 0 0 1 .14-.38 2.671 2.671 0 0 1 2.41-1.57 2.623 2.623 0 0 1 2.09 1.05 2.142 2.142 0 0 1 .32.52c.05.12.09.24.13.36a4.435 4.435 0 0 1 .09.64Z" fill="#4a4c4f"/>
+        <path d="M12.47 12.56h1.54v.91h-1.54zm0 1.91h1.54v.78h-1.54zm0 1.78h1.54v.78h-1.54zm0 1.78h1.54v.67h-1.54z" fill="#fa0"/>
+        <path d="M8.17 15.28v1.44a.495.495 0 0 1-.5.5H6.08a.495.495 0 0 1-.5-.5v-1.44a.501.501 0 0 1 .5-.5h1.59a.501.501 0 0 1 .5.5Z" fill="#f61e1e"/>
+    </g>
 </symbol><symbol id="cloud-dispatcher" viewBox="0 0 40 43">
     <path d="M39.15 10H.85a.85.85 0 0 0-.85.85v7.31c0 .47.38.85.85.85h38.3c.47 0 .85-.38.85-.85v-7.31a.85.85 0 0 0-.85-.85ZM9 16.45c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9ZM34 17c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Zm5.15-17H.85A.85.85 0 0 0 0 .85v7.31c0 .47.38.85.85.85h38.3c.47 0 .85-.38.85-.85V.85a.85.85 0 0 0-.85-.85ZM9 6.45c0 .3-.25.55-.55.55h-4.9C3.25 7 3 6.75 3 6.45v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9ZM34 7c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Zm5.15 13H.85a.85.85 0 0 0-.85.85v7.31c0 .47.38.85.85.85h38.3c.47 0 .85-.38.85-.85v-7.31a.85.85 0 0 0-.85-.85ZM9 26.45c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9Zm7 0c0 .3-.25.55-.55.55h-4.9c-.3 0-.55-.25-.55-.55v-1.9c0-.3.25-.55.55-.55h4.9c.3 0 .55.25.55.55v1.9ZM34 27c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Zm-17 3h6v7h-6z"/>
     <rect y="38" width="40" height="5" rx=".67" ry=".67"/>
@@ -119,7 +133,7 @@
     <path d="m84.75 30.25-5.6 5.6c5.8 3 10.5 7.7 13.5 13.5l5.6-5.6c-3.4-5.5-8-10.2-13.5-13.5Zm-48.9 48.8-5.6 5.7c3.3 5.5 8 10.1 13.5 13.5l5.6-5.6c-5.7-3.1-10.4-7.8-13.5-13.6Zm43.3 13.6 5.6 5.6c5.5-3.3 10.1-8 13.5-13.5l-5.6-5.6c-3.1 5.7-7.8 10.4-13.5 13.5Zm-29.7-56.7-5.7-5.7c-5.5 3.4-10.1 8-13.5 13.5l5.6 5.6c3.1-5.7 7.8-10.4 13.6-13.4Zm-27.4 57-2.9 2.9c3.7 5.2 8.2 9.8 13.5 13.5l2.9-2.9c-5.3-3.7-9.9-8.2-13.5-13.5Zm84.4 0c-3.6 5.3-8.2 9.9-13.5 13.5l2.9 2.9c5.2-3.7 9.8-8.3 13.5-13.5l-2.9-2.9Zm-84.4-57.4c3.6-5.3 8.2-9.9 13.5-13.5l-2.8-2.8c-5.2 3.7-9.8 8.3-13.5 13.5l2.8 2.8Z"/>
     <circle cx="64.25" cy="64.25" r="63.75" fill="none" stroke="#000" stroke-miterlimit="10"/>
 </symbol><symbol id="logo-android" viewBox="0 0 26 26">
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__a-a67ccc46-0cee-4264-83cd-17281cf1942a" x1="13.641" x2="-3.141" y1="549.889" y2="533.106">
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__a-755569f3-aad8-4808-ad4b-64e87a5d6671" x1="13.641" x2="-3.141" y1="549.889" y2="533.106">
         <stop offset="0" stop-color="#00a0ff"/>
         <stop offset=".007" stop-color="#00a1ff"/>
         <stop offset=".26" stop-color="#00beff"/>
@@ -127,27 +141,27 @@
         <stop offset=".76" stop-color="#00dfff"/>
         <stop offset="1" stop-color="#00e3ff"/>
     </linearGradient>
-    <path d="M2.3.5c-.3.3-.5.8-.5 1.4V24c0 .6.2 1.1.5 1.4l.1.1 12.4-12.4v-.2L2.3.5z" fill="url(#logo-android_svg__a-a67ccc46-0cee-4264-83cd-17281cf1942a)"/>
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__b-db2f434a-cfb0-440b-8cdd-a54525ba4e31" x1="25.676" x2="1.479" y1="538.597" y2="538.597">
+    <path d="M2.3.5c-.3.3-.5.8-.5 1.4V24c0 .6.2 1.1.5 1.4l.1.1 12.4-12.4v-.2L2.3.5z" fill="url(#logo-android_svg__a-755569f3-aad8-4808-ad4b-64e87a5d6671)"/>
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__b-592f193e-869b-4a55-96b2-fd0f9dc82061" x1="25.676" x2="1.479" y1="538.597" y2="538.597">
         <stop offset="0" stop-color="#ffe000"/>
         <stop offset=".409" stop-color="#ffbd00"/>
         <stop offset=".775" stop-color="orange"/>
         <stop offset="1" stop-color="#ff9c00"/>
     </linearGradient>
-    <path d="m18.9 17.3-4.1-4.1v-.3l4.1-4.1h.1l4.9 2.8c1.4.8 1.4 2.1 0 2.9l-5 2.8z" fill="url(#logo-android_svg__b-db2f434a-cfb0-440b-8cdd-a54525ba4e31)"/>
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__c-12ad58c2-e334-4748-ad62-24376d5fbb36" x1="16.668" x2="-6.09" y1="536.302" y2="513.544">
+    <path d="m18.9 17.3-4.1-4.1v-.3l4.1-4.1h.1l4.9 2.8c1.4.8 1.4 2.1 0 2.9l-5 2.8z" fill="url(#logo-android_svg__b-592f193e-869b-4a55-96b2-fd0f9dc82061)"/>
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__c-c0ab179d-a641-405d-a6bc-9dd780a8d444" x1="16.668" x2="-6.09" y1="536.302" y2="513.544">
         <stop offset="0" stop-color="#ff3a44"/>
         <stop offset="1" stop-color="#c31162"/>
     </linearGradient>
-    <path d="M19 17.2 14.7 13 2.3 25.5c.4.5 1.2.5 2.1 0L19 17.2" fill="url(#logo-android_svg__c-12ad58c2-e334-4748-ad62-24376d5fbb36)"/>
-    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__d-0b308318-379e-4bed-b64d-acacec0853d2" x1="-.861" x2="9.301" y1="558.422" y2="548.26">
+    <path d="M19 17.2 14.7 13 2.3 25.5c.4.5 1.2.5 2.1 0L19 17.2" fill="url(#logo-android_svg__c-c0ab179d-a641-405d-a6bc-9dd780a8d444)"/>
+    <linearGradient gradientTransform="matrix(1 0 0 -1 0 551.597)" gradientUnits="userSpaceOnUse" id="logo-android_svg__d-dc75fef2-0bef-4242-aeb1-e6ba3769ad54" x1="-.861" x2="9.301" y1="558.422" y2="548.26">
         <stop offset="0" stop-color="#32a071"/>
         <stop offset=".069" stop-color="#2da771"/>
         <stop offset=".476" stop-color="#15cf74"/>
         <stop offset=".801" stop-color="#06e775"/>
         <stop offset="1" stop-color="#00f076"/>
     </linearGradient>
-    <path d="M19 8.8 4.4.5C3.5 0 2.7 0 2.3.5L14.7 13 19 8.8z" fill="url(#logo-android_svg__d-0b308318-379e-4bed-b64d-acacec0853d2)"/>
+    <path d="M19 8.8 4.4.5C3.5 0 2.7 0 2.3.5L14.7 13 19 8.8z" fill="url(#logo-android_svg__d-dc75fef2-0bef-4242-aeb1-e6ba3769ad54)"/>
 </symbol><symbol id="cloud-driver" viewBox="0 0 18 21">
     <path d="M3 0c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1Zm12 0c-.55 0-1 .4-1 1v3c0 .5.45 1 1 1s1-.5 1-1V1c0-.6-.45-1-1-1ZM0 7.76V19c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V7.76H0ZM9 15c0 1.1-.9 2-2 2H5v-1h2c.55 0 1-.5 1-1 0-.6-.45-1-1-1H6v-1h1c.55 0 1-.5 1-1 0-.6-.45-1-1-1H5v-1h2c1.1 0 2 .9 2 2 0 .6-.27 1.1-.69 1.5.42.3.69.9.69 1.5Zm4 2h-3v-1h1v-5h-1v-1h2v6h1v1Z"/>
     <path d="M16.28 2.03v1.7c.14.23.22.49.22.77 0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5c0-.28.08-.55.22-.77V2H4.28v1.73c.14.23.22.49.22.77C4.5 5.33 3.83 6 3 6s-1.5-.67-1.5-1.5c0-.28.08-.55.22-.77v-1.7C.75 2.17 0 3 0 4v3h18V4c0-1-.75-1.83-1.72-1.97Z"/>
