feat: descriptor interface by category

--- a/lib/assets/scss/lesli3/components/lesli-tab.scss
+++ b/lib/assets/scss/lesli3/components/lesli-tab.scss
@@ -25,6 +25,6 @@ div.lesli-tab {
     }
     div.tab-items {
         margin: 0 -2rem;
-        padding: 2rem;
+        padding: 0 2rem 2rem;
     }
 }
