--- a/lib/assets/scss/lesli3/components/lesli-table.scss
+++ b/lib/assets/scss/lesli3/components/lesli-table.scss
@@ -70,7 +70,7 @@ table.lesli-table {
             // apply styles only to direct anchor elements 
             & > a {
                 display: block;
-                padding: var(--table-cell-padding);
+                //padding: var(--table-cell-padding);
             }
         }
     }
