feat: improve descriptor render

--- a/lib/assets/scss/lesli3/components/lesli-tab.scss
+++ b/lib/assets/scss/lesli3/components/lesli-tab.scss
@@ -24,7 +24,6 @@ div.lesli-tab {
         margin-bottom: 0;
     }
     div.tab-items {
-        margin: 0 -2rem;
-        padding: 0 2rem 2rem;
+        //margin: 0 -2rem;
     }
 }
