feat: move styles for lesli components to own folder

--- a/lib/assets/scss/lesli3/helpers/display.scss
+++ b/lib/assets/scss/lesli3/helpers/display.scss
@@ -22,3 +22,9 @@ For more information read the license file including with this software.
 .is-fullwidth {
     width: 100%;
 }
+
+
+//
+.hover:hover {
+    cursor: pointer;
+}
