--- a/lib/assets/scss/lesli3/layout/application-engines.scss
+++ b/lib/assets/scss/lesli3/layout/application-engines.scss
@@ -49,7 +49,7 @@ For more information read the license file including with this software.
             background-color: lesli-css-color(silver, 100);
             box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
             transition: all ease-in-out .4s;
-            box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+            box-shadow: $lesli-box-shadow;
             &:hover {
                 background-color: #F0F4FF;
             }
