--- a/lib/assets/scss/lesli3/settings/variables.scss
+++ b/lib/assets/scss/lesli3/settings/variables.scss
@@ -36,6 +36,8 @@ $lesli-logo-color: #fff !default;
 $lesli-font-color: black !default;
 $lesli-font-size: 16px !default;
 
+$lesli-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+
 
 // · define native CSS variables to use along the stylesheets
 :root {
