--- a/lib/assets/scss/templates/dashboards.scss
+++ b/lib/assets/scss/templates/dashboards.scss
@@ -30,16 +30,19 @@ main {
 
         // widget card
         .card {
-            border-radius: .8rem;
+            border-radius: .6rem;
             box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
         }
 
         // widgets with tables
-        table.lesli-table thead {
-            background-color: transparent;
-            border-bottom: 1px solid lesli-css-color(slate);
-            th {
-                padding-bottom: 0px;
+        table.lesli-table {
+            box-shadow: none;
+            thead {
+                background-color: transparent;
+                border-bottom: 1px solid lesli-css-color(slate);
+                th {
+                    padding-bottom: 0px;
+                }
             }
         }
     }
