fix: table cell padding when has link or href

--- a/lib/assets/scss/lesli3/bulma/loader.scss
+++ b/lib/assets/scss/lesli3/bulma/loader.scss
@@ -50,3 +50,9 @@ $table-cell-padding: 1rem;
         margin-right: 8px;
     }
 }
+
+
+fieldset.block {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
