--- a/lib/assets/scss/lesli3/lesli/table.scss
+++ b/lib/assets/scss/lesli3/lesli/table.scss
@@ -47,7 +47,6 @@ table.lesli-table {
         background-color: #E2E6F6;
     }
 
-    thead, 
     tbody {
 
         // default styles for cell containers
@@ -58,14 +57,15 @@ table.lesli-table {
             // due <a> will include the corresponding padding
             // currently only supported by webkit, bug this is part
             // of the standard so other engines will support soon
+            // ** currently not supported by firefox **
             &:has(a) {
                 padding: 0 !important;
-            }
 
-            // apply styles only to direct anchor elements 
-            & > a {
-                display: block;
-                //padding: var(--table-cell-padding);
+                // apply styles only to direct anchor elements 
+                & > a {
+                    display: block;
+                    padding: var(--table-cell-padding);
+                }
             }
         }
     }
@@ -93,5 +93,4 @@ table.lesli-table {
             }
         }
     }
-
 }
