fix: settings management

--- a/lib/assets/scss/lesli3/layout/application-sidebar.scss
+++ b/lib/assets/scss/lesli3/layout/application-sidebar.scss
@@ -41,6 +41,7 @@ aside.application-sidebar {
         height: var(--lesli-header-height);
         max-height: var(--lesli-header-height);
         background-color: var(--lesli-logo-color);
+        background-color: transparent;
         justify-content: center;
     }
 
