fix: styles for about page

--- a/app/assets/stylesheets/abouts.scss
+++ b/app/assets/stylesheets/abouts.scss
@@ -23,7 +23,7 @@ For more information read the license file including with this software.
 
 
 // · 
-body.about-version {
+body.cloudabout-version {
 
     .application-component .engines {
         @include lesli-css-flex-columns($column-width: 200px, $gap: 14px);
