refactor: use dig to access lesli config

--- a/app/views/layouts/partials/_application-lesli-sidebar.html.erb
+++ b/app/views/layouts/partials/_application-lesli-sidebar.html.erb
@@ -1,6 +1,6 @@
 <%#
 
-Copyright (c) 2020, all rights reserved.
+Copyright (c) 2023, all rights reserved.
 
 All the information provided by this platform is protected by international laws related  to 
 industrial property, intellectual property, copyright and relative international laws. 
@@ -59,7 +59,7 @@ end
     <% unless Rails.application.config.lesli.dig(:context).blank? %>
         <template v-slot:context>
             <p v-cloak class="has-background-warning has-text-centered py-2">
-                <%= Rails.application.config.lesli[:context] %>
+                <%= Rails.application.config.lesli.dig(:context) %>
             </p>
         </template>
     <% end %>
