feat: add compatibility with babel2

--- a/app/views/layouts/partials/_application-lesli-sidebar.html.erb
+++ b/app/views/layouts/partials/_application-lesli-sidebar.html.erb
@@ -23,7 +23,7 @@ app_icon = "app-icon"
 app_logo = "app-logo"
 
 # custom icons for LesliCloud
-if defined?(LesliCloud) || defined?(LesliBuilder)
+if defined?(LesliCloud) || defined?(MitwerkenCloud)
     app_icon = "app-icon-light"
     app_logo = "app-logo-light"
 end
