feat: add/implement lesli-form component

--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -70,6 +70,7 @@ For more information read the license file including with this software.
 @import "./lesli3/lesli/msg";
 @import "./lesli3/lesli/navbar";
 @import "./lesli3/lesli/panel";
+@import "./lesli3/lesli/form";
 @import "./lesli3/lesli/tab";
 @import "./lesli3/lesli/table";
 @import "./lesli3/lesli/toggle";
