--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -49,6 +49,7 @@ For more information read the license file including with this software.
 // · Panels :) 
 @import "./lesli3/panels/panel-tasks";
 @import "./lesli3/panels/panel-ticket";
+@import "./lesli3/panels/panel-profile";
 @import "./lesli3/panels/panel-notification";
 @import "./lesli3/panels/panel-announcements";
 
