feat: add new mode to visualize files

--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -80,6 +80,7 @@ For more information read the license file including with this software.
 
 // · Lesli cloud objects
 @import "./lesli3/cloud-objects/discussion";
+@import "./lesli3/cloud-objects/file";
 
 
 // · Overrides for vendor libraries
