feat: add styles for lesli_builder logo

--- a/lib/assets/scss/lesli3/pages/base.scss
+++ b/lib/assets/scss/lesli3/pages/base.scss
@@ -57,7 +57,8 @@ body {
         .logo {
             img {
                 width: 180px;
-                &.lesli_cloud-logo {
+                &.lesli_cloud-logo,
+                &.lesli_builder-logo {
                     width: 86px;
                 }
             }
