fix: import styles

--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -76,6 +76,7 @@ For more information read the license file including with this software.
 @import "./lesli3/lesli/table";
 @import "./lesli3/lesli/toggle";
 @import "./lesli3/lesli/toolbar";
+@import "./lesli3/lesli/calendar";
 
 
 // · Lesli cloud objects
