feat: add new status component

--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -56,6 +56,7 @@ For more information read the license file including with this software.
 
 // · Standard components
 @import "./lesli3/components/editor-richtext";
+@import "./lesli3/components/stepper";
 
 
 // · Lesli vue components
