--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -16,8 +16,13 @@ For more information read the license file including with this software.
 // · 
 */
 
+
 // · 
 @import "lesli-css";
+
+// · Import customization from builder engine
+// · see: https://github.com/leitfaden/cloud_development/blob/master/documentation/design/02-theme.md
+@import "<%= LC::System::Info.sass_instance_file('variables') %>";
 
 
 // · Configuration & variables
@@ -147,3 +152,8 @@ h6 {
 // Vue Animation component
 .v-enter-active, .v-leave-active { transition: opacity 0.5s ease; }
 .v-enter-from, .v-leave-to { opacity: 0; }
+
+
+// · Import theme overrides from builder engine
+// · see: https://github.com/leitfaden/cloud_development/blob/master/documentation/design/02-theme.md
+@import "<%= LC::System::Info.sass_instance_file('theme') %>";
