feat: add styles to workflow status component

--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -56,7 +56,9 @@ For more information read the license file including with this software.
 
 // · Standard components
 @import "./lesli3/components/editor-richtext";
-@import "./lesli3/components/stepper";
+
+// · Shared
+@import "./lesli3/shared/workflow-status-progress";
 
 
 // · Lesli vue components
